Adapted analyzers to use ScopeTreeLookupParameter and wire the depth setting correctly for  * `SymbolicExpressionTreeEncoding`  * `ArtificialAntProblem`  * `SymbolicRegression` #999
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3681 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ArtificialAnt/3.3/HeuristicLab.Problems.ArtificialAnt-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ArtificialAnt/3.3/HeuristicLab.Problems.ArtificialAnt-3.3.csproj
@@ -80,8 +80,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analyzers\IAntTrailPopulationAnalyzer.cs" />
-    <Compile Include="Analyzers\PopulationBestAntTrailAnalyzer.cs" />
+    <Compile Include="Analyzers\BestAntTrailAnalyzer.cs" />
+    <Compile Include="Analyzers\IAntTrailAnalyzer.cs" />
     <Compile Include="AntInterpreter.cs" />
     <Compile Include="HeuristicLabProblemsArtificialAntPlugin.cs" />
     <Compile Include="Evaluator.cs" />
