incremented version of !CodeEditor to 3.3 (ticket #1002)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3705 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CodeEditor/3.3/HeuristicLab.CodeEditor-3.3.csproj
+++ b/sources/HeuristicLab.CodeEditor/3.3/HeuristicLab.CodeEditor-3.3.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <RootNamespace>HeuristicLab.CodeEditor</RootNamespace>
-    <AssemblyName>HeuristicLab.CodeEditor-3.2</AssemblyName>
+    <AssemblyName>HeuristicLab.CodeEditor-3.3</AssemblyName>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{489CFE09-FDF7-4C89-BAB5-BD09CADD61AD}</ProjectGuid>
@@ -55,7 +55,7 @@
     <FileAlignment>4096</FileAlignment>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <DocumentationFile>bin\x86\Release\HeuristicLab.CodeEditor-3.2.XML</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\HeuristicLab.CodeEditor-3.3.xml</DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
@@ -74,10 +74,10 @@
     <FileAlignment>4096</FileAlignment>
     <DebugType>None</DebugType>
     <PlatformTarget>x64</PlatformTarget>
-    <DocumentationFile>bin\x64\Release\HeuristicLab.CodeEditor-3.2.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\Release\HeuristicLab.CodeEditor-3.3.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DocumentationFile>bin\Release\HeuristicLab.CodeEditor-3.2.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.CodeEditor-3.3.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.NRefactory, Version=3.1.1.5327, Culture=neutral, PublicKeyToken=efe927acf176eea2, processorArchitecture=MSIL">
