sorting of column names in !RunCollection and fixed errors in !RunCollectionConstraints (ticket #970)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3717 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -103,7 +103,7 @@
     <Compile Include="Interfaces\IStrategyParameterManipulator.cs" />
     <Compile Include="Interfaces\IStrategyParameterCreator.cs" />
     <Compile Include="Interfaces\IRun.cs" />
-    <Compile Include="IRunCollectionConstraint.cs" />
+    <Compile Include="RunCollectionConstraints\IRunCollectionConstraint.cs" />
     <Compile Include="OptimizerList.cs" />
     <Compile Include="Experiment.cs" />
     <Compile Include="Interfaces\IOptimizer.cs" />
