--- a/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
+++ b/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
@@ -81,13 +81,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabCommonResourcesPlugin.cs.frame" />
-    <Compile Include="HeuristicLabCommonResourcesPlugin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.Designer.cs">
+    <Compile Include="HeuristicLab.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
+      <DependentUpon>HeuristicLab.resx</DependentUpon>
     </Compile>
+    <Compile Include="HeuristicLabCommonResourcesPlugin.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VS2008ImageLibrary.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -97,32 +97,6 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
-    <None Include="Resources\CopyIcon.png" />
-    <None Include="Resources\CutIcon.png" />
-    <None Include="Resources\DeleteFolderIcon.png" />
-    <None Include="Resources\DeleteIcon.png" />
-    <None Include="Resources\FlagBlueIcon.png" />
-    <None Include="Resources\FlagGreenIcon.png" />
-    <None Include="Resources\FlagRedIcon.png" />
-    <None Include="Resources\FormulaEvaluatorIcon.png" />
-    <None Include="Resources\FunctionIcon.png" />
-    <None Include="Resources\HeuristicLab.ico" />
-    <None Include="Resources\HeuristicLab.png" />
-    <None Include="Resources\NewFolderIcon.png" />
-    <None Include="Resources\NewIcon.png" />
-    <None Include="Resources\OpenIcon.png" />
-    <None Include="Resources\PasteIcon.png" />
-    <None Include="Resources\PrintIcon.png" />
-    <None Include="Resources\PrintPreviewIcon.png" />
-    <None Include="Resources\RedoIcon.png" />
-    <None Include="Resources\RefreshDocument.png" />
-    <None Include="Resources\SaveAllIcon.png" />
-    <None Include="Resources\SaveIcon.png" />
-    <None Include="Resources\ShowDetails.png" />
-    <None Include="Resources\ShowLargeIcons.png" />
-    <None Include="Resources\ShowSmallIcons.png" />
-    <None Include="Resources\UndoIcon.png" />
-    <None Include="Resources\WarningIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
@@ -131,10 +105,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources.resx">
+    <EmbeddedResource Include="HeuristicLab.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
+      <LastGenOutput>HeuristicLab.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="VS2008ImageLibrary.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -427,6 +400,7 @@
     <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Executable_Stopped.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\HeuristicLab\HeuristicLab.ico" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_ActualSize.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Performance.ico" />
   </ItemGroup>
