#1005  * disabled fast up to date check in main project
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3737 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab 3.3/HeuristicLab 3.3.csproj
+++ b/sources/HeuristicLab 3.3/HeuristicLab 3.3.csproj
@@ -17,6 +17,7 @@
     <StartupObject>HeuristicLab.Program</StartupObject>
     <RunPostBuildEvent>Always</RunPostBuildEvent>
     <ApplicationIcon>HeuristicLab.ico</ApplicationIcon>
+    <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
