#893  * Fixed wiring of iteration based operators like the michalewicz manipulators for real vector encoding
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3750 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -86,6 +86,7 @@
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
     <Compile Include="BatchRun.cs" />
+    <Compile Include="Interfaces\IIterationBasedOperator.cs" />
     <Compile Include="Interfaces\IRealVectorDecoder.cs" />
     <Compile Include="Interfaces\IRealVectorEncoder.cs" />
     <Compile Include="RunCollectionConstraints\RunCollectionComparisonConstraint.cs" />
