Replaced HeuristicLab logo and made some minor changes in !AboutDialog (#989)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3761 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -269,7 +269,8 @@
     </Content>
     <None Include="Resources\Error.ico" />
     <Content Include="Resources\HeuristicLab.ico" />
-    <Content Include="Resources\Logo_white.gif" />
+    <None Include="Resources\HeuristicLabLogo.png" />
+    <None Include="Resources\HeuristicLabBanner.png" />
     <None Include="Resources\VS2008ImageLibrary_Actions_Delete.png" />
     <Content Include="Resources\VS2008ImageLibrary_Actions_PublishToWebHS.png" />
     <Content Include="Resources\VS2008ImageLibrary_Actions_RepeatHS.png" />
