Changed URL of deployment service. #989
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3762 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/Properties/Settings.settings
+++ b/sources/HeuristicLab.PluginInfrastructure/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">-</Value>
     </Setting>
     <Setting Name="UpdateLocation" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://servdev.heuristiclab.com/Deployment-3.3/Update.svc</Value>
+      <Value Profile="(Default)">http://services.heuristiclab.com/Deployment-3.3/Update.svc</Value>
     </Setting>
     <Setting Name="UpdateLocationUserName" Type="System.String" Scope="User">
       <Value Profile="(Default)">anonymous</Value>
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">GetTheLab!</Value>
     </Setting>
     <Setting Name="UpdateLocationAdministrationAddress" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://servdev.heuristiclab.com/Deployment-3.3/Admin.svc</Value>
+      <Value Profile="(Default)">http://services.heuristiclab.com/Deployment-3.3/Admin.svc</Value>
     </Setting>
     <Setting Name="ShowPluginUploadControls" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
