Implemented reviewers' comments (#893)  * enhanced optimizer settings to customize appearance
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3768 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimizer/3.3/Properties/Settings.settings
+++ b/sources/HeuristicLab.Optimizer/3.3/Properties/Settings.settings
@@ -11,5 +11,14 @@
     <Setting Name="ShowClipboard" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ShowMaximized" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CollapseClipboard" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CollapseOperatorsSidebar" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
