--- a/sources/HeuristicLab.Optimizer/3.3/app.config
+++ b/sources/HeuristicLab.Optimizer/3.3/app.config
@@ -16,6 +16,15 @@
             <setting name="ShowClipboard" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowMaximized" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CollapseClipboard" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CollapseOperatorsSidebar" serializeAs="String">
+                <value>False</value>
+            </setting>
         </HeuristicLab.Optimizer.Properties.Settings>
     </userSettings>
 </configuration>
