implemented check for MS !ChartControls (ticket #893)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3776 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -86,6 +86,12 @@
   <ItemGroup>
     <None Include="HeuristicLabOptimizerPlugin.cs.frame" />
     <Compile Include="FileManager.cs" />
+    <Compile Include="ChartControlsWarning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChartControlsWarning.Designer.cs">
+      <DependentUpon>ChartControlsWarning.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuItems\ClipboardMenuItem.cs" />
     <Compile Include="MenuItems\AboutMenuItem.cs" />
     <Compile Include="MenuItems\ConvertIntoUserDefinedAlgorithmMenuItem.cs" />
