Added algorithm and problem name and type to the parameters collection when collecting the parameter values of a run (#947)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3785 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
+++ b/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
@@ -401,6 +401,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\HeuristicLab\HeuristicLab.ico" />
+    <None Include="Resources\HeuristicLab\HeuristicLabBanner.png" />
+    <None Include="Resources\HeuristicLab\HeuristicLabLogo.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_ActualSize.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Performance.ico" />
   </ItemGroup>
