--- a/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -196,8 +196,8 @@
     <None Include="Documents\Images\Play.png" />
     <None Include="Documents\Images\Restart.png" />
     <None Include="Documents\Images\Stop.png" />
+    <EmbeddedResource Include="Documents\LS_Knapsack.hl" />
     <EmbeddedResource Include="Documents\IslandGA_TSP.hl" />
-    <EmbeddedResource Include="Documents\LS_OneMax.hl" />
     <EmbeddedResource Include="Documents\SA_Rastrigin.hl" />
     <EmbeddedResource Include="Documents\TS_TSP.hl" />
     <EmbeddedResource Include="Documents\SGP_SantaFe.hl" />
